tests/ui/self/self_type_keyword.stderr
error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:2:10
   |
LL |   struct Self;
   |          ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:14:13
   |
LL |         ref Self => (),
   |             ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:31:26
   |
LL |     extern crate core as Self;
   |                          ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:36:32
   |
LL |     use std::option::Option as Self;
   |                                ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:41:11
   |
LL |     trait Self {}
   |           ^^^^ expected identifier, found keyword

error: lifetimes cannot use keyword names
  --> $DIR/self_type_keyword.rs:6:12
   |
LL | struct Bar<'Self>;
   |            ^^^^^

error[E0392]: parameter `'Self` is never used
  --> $DIR/self_type_keyword.rs:6:12
   |
LL | struct Bar<'Self>;
   |            ^^^^^ unused parameter
   |
   = help: consider removing `'Self`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0392`.
